{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 540,
  "lineage": "673b59fe-881e-6ba0-ec87-da22091a2129",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": null,
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/backendAddressPools/appgatway-network-beap",
                "ip_addresses": null,
                "name": "appgatway-network-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/backendHttpSettingsCollection/appgatway-network-be-htst",
                "name": "appgatway-network-be-htst",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": null
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/frontendIPConfigurations/appgatway-network-feip",
                "name": "appgatway-network-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/gateway-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/frontendPorts/appgatway-network-feport",
                "name": "appgatway-network-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/appgatway-network/subnets/frontend"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/frontendIPConfigurations/appgatway-network-feip",
                "frontend_ip_configuration_name": "appgatway-network-feip",
                "frontend_port_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/frontendPorts/appgatway-network-feport",
                "frontend_port_name": "appgatway-network-feport",
                "host_name": "",
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/httpListeners/appgatway-network-httplstn",
                "name": "appgatway-network-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway",
            "identity": [],
            "location": "eastus",
            "name": "network-appgateway",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/backendAddressPools/appgatway-network-beap",
                "backend_address_pool_name": "appgatway-network-beap",
                "backend_http_settings_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/backendHttpSettingsCollection/appgatway-network-be-htst",
                "backend_http_settings_name": "appgatway-network-be-htst",
                "http_listener_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/httpListeners/appgatway-network-httplstn",
                "http_listener_name": "appgatway-network-httplstn",
                "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/applicationGateways/network-appgateway/requestRoutingRules/appgatway-network-rqrt",
                "name": "appgatway-network-rqrt",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "terraformrg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "tags": null,
            "timeouts": null,
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.gateway",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.appgateway-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraformvNetAD1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/terraformvNetAD1",
            "ip_configuration": [
              {
                "name": "internal1",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/AD"
              }
            ],
            "location": "eastus",
            "name": "terraformvNetAD1",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "terraformrg"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.subnet2AD",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraformvNetjump1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/terraformvNetjump1",
            "ip_configuration": [
              {
                "name": "internal2",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/jump-public",
                "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/jump"
              }
            ],
            "location": "eastus",
            "name": "terraformvNetjump1",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "terraformrg"
          },
          "dependencies": [
            "azurerm_public_ip.jump-public",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.subnet1jump",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraformvNettools1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/terraformvNettools1",
            "ip_configuration": [
              {
                "name": "internal3",
                "primary": true,
                "private_ip_address": "192.168.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/tools"
              }
            ],
            "location": "eastus",
            "name": "terraformvNettools1",
            "private_ip_address": "192.168.3.4",
            "private_ip_addresses": [
              "192.168.3.4"
            ],
            "resource_group_name": "terraformrg"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.subnet3tools",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "AD-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "eastus",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "terraformrg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jump-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup2",
            "location": "eastus",
            "name": "acceptanceTestSecurityGroup2",
            "resource_group_name": "terraformrg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tools-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup3",
            "location": "eastus",
            "name": "acceptanceTestSecurityGroup3",
            "resource_group_name": "terraformrg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AD-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/AD",
            "name": "AD",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraformrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.AD-nsg",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jump-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup2/securityRules/jump",
            "name": "jump",
            "network_security_group_name": "acceptanceTestSecurityGroup2",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraformrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.jump-nsg",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tools-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup3/securityRules/tools",
            "name": "tools",
            "network_security_group_name": "acceptanceTestSecurityGroup3",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraformrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tools-nsg",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "gateway-pip",
            "resource_group_name": "terraformrg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jump-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/jump-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.72.69.174",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jump-public",
            "resource_group_name": "terraformrg",
            "sku": "Basic",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.254.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/appgatway-network/subnets/backend",
            "name": "backend",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "appgatway-network"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.appgateway-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.254.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/appgatway-network/subnets/frontend",
            "name": "frontend",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "appgatway-network"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.appgateway-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/jump",
            "name": "jump",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "terraformvNetjump"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2AD",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/AD",
            "name": "AD",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "terraformvNetjump"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3tools",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.3.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/tools",
            "name": "tools",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "terraformvNetjump"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "AD",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/AD",
            "network_security_group_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/AD"
          },
          "dependencies": [
            "azurerm_network_security_group.AD-nsg",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.subnet2AD",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/jump",
            "network_security_group_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup2",
            "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/jump"
          },
          "dependencies": [
            "azurerm_network_security_group.jump-nsg",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.subnet1jump",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tools",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/tools",
            "network_security_group_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup3",
            "subnet_id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump/subnets/tools"
          },
          "dependencies": [
            "azurerm_network_security_group.tools-nsg",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.subnet3tools",
            "azurerm_virtual_network.terraformvNetjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "appgateway-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.254.0.0/16"
            ],
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/appgatway-network",
            "location": "eastus",
            "name": "appgatway-network",
            "resource_group_name": "terraformrg"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraformvNetjump",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "id": "/subscriptions/98822e6a-33c0-4e23-ae58-f1737871975c/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/terraformvNetjump",
            "location": "eastus",
            "name": "terraformvNetjump",
            "resource_group_name": "terraformrg"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    }
  ]
}